separate graph ongoing

--- a/client/app/data/data.html
+++ b/client/app/data/data.html
@@ -16,13 +16,26 @@
 				</svg>
 			</section> -->
 			<section class="displaySection" id="scatterPlot">
-				<svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" class="svg" id="svg3">
+				<svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" class="svgBase" id="svg1">
+				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" class="svgA" id="svg3">
 				</svg>
 			</section>
-			<section class="displaySection" id="brush">
+			<section>	
+				<svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" class="svgLabel" id="svg2">
+				</svg>
+			</section>
+			<section>	
+				
+			</section>
+			<section>	
+				<svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" class="svgB" id="svg4">
+				</svg>
+			</section>
+		<!-- 	<section class="displaySection" id="brush">
 				<svg xmlns="http://www.w3.org/2000/svg" xlink:xlink="http://www.w3.org/1999/xlink" class="svg" id="svg4">
 				</svg>
-			</section>
+			</section> -->
 		 </div>
 		<!-- <div class="table-responsive" id="display"></div> -->
    </div>
